--- a/src/components/search-container/SearchPage.scss
+++ b/src/components/search-container/SearchPage.scss
@@ -3,19 +3,19 @@
     justify-content: center;
 
 
-    .search-input {
-        padding: 25px;
-        height: 40px;
-        width: 50% !important;
-        margin:0 auto;
+    // .search-input {
+    //     padding: 25px;
+    //     height: 40px;
+    //     width: 50% !important;
+    //     margin:0 auto;
 
-    }
+    // }
 
-    input {
-        width: 65% !important;
-        height: 30px;
-        margin: 10px 10px 0px 100px;
-       }
+    // input {
+    //     width: 65% !important;
+    //     height: 30px;
+    //     margin: 10px 10px 0px 100px;
+    //    }
 
     .search-button {
         font-family: sans-serif;
